--- a/MTSaglikAuthenticator.Web/Views/Seller/UploadFile.cshtml
+++ b/MTSaglikAuthenticator.Web/Views/Seller/UploadFile.cshtml
@@ -1,4 +1,4 @@
-﻿@model MTSaglikAuthenticator.Entities.ViewModels.UserViewModel
+﻿@model MTSaglikAuthenticator.Entities.ViewModels.FileViewModel
 
 @{
     ViewData["Title"] = "UploadFile";
@@ -10,16 +10,16 @@
 
 <h4></h4>
 <hr />
-<form class="form-horizontal" asp-action="Create">
+<form method="post" class="form-horizontal" asp-action="UploadFile" asp-controller="Seller" enctype="multipart/form-data">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group" >
-        <label class="col-sm-3 control-label no-padding-right" asp-for="Id">Customer Name: </label>
+        <label class="col-sm-3 control-label no-padding-right" asp-for="CustomerId">Customer Name: </label>
         <div class="col-sm-4" id="institutionSelect">
-            @Html.DropDownListFor(l => l.Id, new SelectList(ViewBag.File.Data, "Id", "FullName"), new { @class = "form-control col-sm-12" })
+            @Html.DropDownListFor(l => l.CustomerId, new SelectList(ViewBag.File.Data, "Id", "FullName"), new { @class = "form-control col-sm-12" })
         </div>
     </div>
     <div class="form-group">
-        <label class="col-sm-3 control-label no-padding-right" asp-for="Id">File: </label>
+        <label class="col-sm-3 control-label no-padding-right" asp-for="FileName">File: </label>
         <div class="col-sm-4">
             <div class="widget-box">
                 <div class="widget-header">
@@ -37,22 +37,17 @@
                     <div class="widget-main">
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <input type="file" id="id-input-file-2" />
+                                <input type="file" name="files" id="id-input-file-2" />
                             </div>
                         </div>
                         <div class="form-group">
                             <div class="col-xs-12">
-                                <input multiple="" type="file" id="id-input-file-3" />
+                                <input  multiple="" type="file" name="files" id="id-input-file-3" />
                             </div>
-
                         </div>
-
                         <label>
-
                             <input type="checkbox" name="file-format" id="id-file-format" class="ace" />
-
                             <span class="lbl"> Allow only images</span>
-
                         </label>
 
                     </div>
